--- a/package.json
+++ b/package.json
@@ -37,9 +37,10 @@
   "dependencies": {
     "@types/jsdom": "^16.2.14",
     "@types/node": "^17.0.31",
-    "http-status-codes": "^2.2.0",
+    "class-validator": "^0.13.2",
     "eslint-config-airbnb-typescript-prettier": "^5.0.0",
     "form-data": "^4.0.0",
+    "http-status-codes": "^2.2.0",
     "jsdom": "^19.0.0",
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
