fix: add full price parse functionality

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/jsdom": "^16.2.14",
     "@types/node": "^17.0.31",
     "class-validator": "^0.13.2",
+    "date-fns": "^2.28.0",
     "eslint-config-airbnb-typescript-prettier": "^5.0.0",
     "form-data": "^4.0.0",
     "http-status-codes": "^2.2.0",
