--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lint": "tslint --project tsconfig.json --format stylish",
     "build": "tsc",
     "serve": "ts-node src/server.ts",
-    "start": "nodemon"
+    "start": "node build/server.js",
+    "start:dev": "nodemon"
   },
   "keywords": [],
   "author": "",
