--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lint": "tslint --project tsconfig.json --format stylish",
     "build": "tsc -p .",
     "start": "NODE_PATH=./build node build/index.js",
-    "start:dev": "nodemon"
+    "start:dev": "nodemon",
+    "serve": "ts-node src/server.ts"
   },
   "keywords": [],
   "author": "",
