feat: implement cors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,7 @@
     "noImplicitAny": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true
   }
 }
