--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/koa": "^2.13.4",
+    "@types/koa__cors": "^3.3.0",
     "@types/koa-bodyparser": "^4.3.7",
     "@types/koa-router": "^7.4.4",
     "@types/node-fetch": "^2.6.1",
@@ -33,12 +34,13 @@
     "ts-node": "^10.7.0",
     "tslint": "^5.20.1",
     "tslint-config-airbnb": "^5.11.2",
-    "typescript": "^3.9.10"
+    "typescript": "^3.9.10",
+    "@types/validator": "^13.7.2",
+    "@types/jsdom": "^16.2.14",
+    "@types/node": "^17.0.31"
   },
   "dependencies": {
-    "@types/jsdom": "^16.2.14",
-    "@types/node": "^17.0.31",
-    "@types/validator": "^13.7.2",
+    "@koa/cors": "^3.3.0",
     "class-validator": "^0.13.2",
     "date-fns": "^2.28.0",
     "eslint-config-airbnb-typescript-prettier": "^5.0.0",
