--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jsdom": "^16.2.14",
     "@types/koa": "^2.13.4",
     "@types/koa__cors": "^3.3.0",
     "@types/koa-bodyparser": "^4.3.7",
     "@types/koa-router": "^7.4.4",
+    "@types/node": "^17.0.31",
     "@types/node-fetch": "^2.6.1",
+    "@types/validator": "^13.7.2",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-node": "^4.1.0",
@@ -34,15 +37,14 @@
     "ts-node": "^10.7.0",
     "tslint": "^5.20.1",
     "tslint-config-airbnb": "^5.11.2",
-    "typescript": "^3.9.10",
-    "@types/validator": "^13.7.2",
-    "@types/jsdom": "^16.2.14",
-    "@types/node": "^17.0.31"
+    "typescript": "^3.9.10"
   },
   "dependencies": {
     "@koa/cors": "^3.3.0",
+    "@trycourier/courier": "^3.12.0",
     "class-validator": "^0.13.2",
     "date-fns": "^2.28.0",
+    "dotenv": "^16.0.1",
     "eslint-config-airbnb-typescript-prettier": "^5.0.0",
     "form-data": "^4.0.0",
     "http-status-codes": "^2.2.0",
