--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "lint": "tslint --project tsconfig.json --format stylish",
     "build": "tsc -p .",
-    "start": "NODE_PATH=./build node build/index.js",
-    "start:dev": "nodemon",
-    "serve": "ts-node src/server.ts"
+    "start": "node build/index.js",
+    "start:dev": "nodemon --exec ts-node src/server.ts --watch src"
   },
   "keywords": [],
   "author": "",
@@ -35,7 +33,6 @@
     "nodemon": "^2.0.16",
     "prettier": "2.6.2",
     "ts-node": "^10.7.0",
-    "tslint": "^5.20.1",
     "tslint-config-airbnb": "^5.11.2",
     "typescript": "^3.9.10"
   },
