--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^10.1.1",
+    "moment": "^2.29.3",
     "node-fetch": "^2.6.6"
   }
 }
